1998-08-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add aclinkflags.m4.

	* aclinkflags.m4: New file.

1998-08-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add acexesuffix.m4 and acguilibs.m4.
	
	* acexesuffix.m4, acguilibs.m4: New files.

1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add acinstall.m4.

	* acinstall.m4: New file.

1998-08-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* actcltk.m4 (md_FIND_BLT): Loop over BLT, BLT8.0 and BLT80
	as possible libraries names.

	* acfind.m4 (md_FIND_LIB): Re-evaluate directory variable before 
	using it to check the library.
	(md_FIND_INCLUDE): Likewise.

	* acffi.m4: Re-evaluate directory variable before using it to
	check for the presence of libffi.{so,a}.  Use same value for
	checking ffi.h.  Likewise for avcall.

1998-08-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* acffi.m4: Use (unexpanded) ${ffidir} not ${dir}.

1998-08-12  Alex Lancaster  <alex@santafe.edu>

	* acswarm.m4 (al_SWARM_LOAD): Search for config.swarm in
	$(swarmdir)/etc/swarm not $(swarmdir)/etc.
	
1998-08-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* acffi.m4: Assign to ffidir even when ffcall is specified.

	* acbuiltinapply.m4, acobjcmalloc.m4: New files.

	* Makefile.am (EXTRA_DIST): Add acbuiltinapply.m4, acfind.m4,
	acnextstep.m4, and acobjcmalloc.m4.

	* acffi.m4: Correct FFIINCLUDES for non-/usr/include case.

1998-08-11  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* acffi.m4: Check for libffi in /usr. 
	(FFIINCLUDES): New variable.  Set to be empty if include
	directory is /usr/include.

1998-08-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* actcltk.m4: Remove md_FIND_TCLOBJC_{HEADERS,LIBRARIES}.

	* acnextstep.m4: New file.

	* acobjclibs.m4: Check for objc_malloc and substitute
	OBJC_MALLOC_OBJ.  Define preprocessor HAVE_OBJC_MALLOC symbol
	when objc_malloc already exists in Objective C runtime.
